[package]
name = "url_prox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
reqwest = "0.11.4"
bytes = "1.3.0"
futures = "0.3.21"
dotenv = "0.15.0"
lazy_static = "1.4.0"
regex = "1.5.4"